...
                                  fontSize: 14,
                                ),
                              ),
                            ),
                            const SizedBox(height: 6),
                            TextFormField(
                              key: const Key('txtEmailLogin'), // <-- KEY PARA PRUEBAS
                              controller: _emailController,
                              style: const TextStyle(color: Color(0xFF787878)),
                              decoration: InputDecoration(
                                hintText: 'tu@email.com',
                                hintStyle: const TextStyle(
                                  color: Color.fromARGB(255, 144, 144, 144),
...
                                  fontSize: 14,
                                ),
                              ),
                            ),
                            const SizedBox(height: 6),
                            TextFormField(
                              key: const Key('txtPasswordLogin'), // <-- KEY PARA PRUEBAS
                              controller: _passwordController,
                              obscureText: _obscurePassword,
                              style: const TextStyle(color: Color(0xFF787878)),
                              decoration: InputDecoration(
                                hintText: 'Tu contraseña',
                                hintStyle: const TextStyle(
...
                            const SizedBox(height: 12),

                            // Botón de inicio
                            SizedBox(
                              width: double.infinity,
                              child: ElevatedButton(
                                key: const Key('btnLogin'), // <-- KEY PARA PRUEBAS
                                onPressed: authController.isLoading
                                    ? null
                                    : () async {
                                        if (_formKey.currentState!.validate()) {
                                          final ok = await authController.login(
                                            _emailController.text,
...
