...
        Expanded(
          child: Padding(
            padding: const EdgeInsets.symmetric(horizontal: 20),
            child: Form(
              key: _formKey,
              child: ListView(
                key: const Key('scrollDonacion'),
                padding: const EdgeInsets.only(top: 230, bottom: 20), // espacio para el card superpuesto
                children: [
                  TipoDonacionSelector(
                    tipoSeleccionado: _tipoDonacion,
                    onChangedTipo: (nuevoTipo) {
                      setState(() {
...

Widget _buildBotonContinuar(usuario) {
  return SizedBox(
    width: double.infinity,
    height: 50,
    child: ElevatedButton(
      key: const Key('btnContinuarDonacion'),
      onPressed: () {
        if (_formKey.currentState!.validate()) {
          final donacion = Donacion(
            donacionId: 0,
            usuarioId: usuario?.usuarioId,
            campaniaId: widget.campania.campaniaId,
...
