...

  final progress = (campania.montoRecaudado ?? 0) / campania.metaRecaudacion;
  final porcentaje = (progress * 100).clamp(0, 100).toStringAsFixed(1);
  final creador = usuariosMap[campania.usuarioIdcreador];

  return GestureDetector(
    key: const Key('campaniaCard'),
    onTap: () {
      Navigator.push(
        context,
        MaterialPageRoute(
          builder: (context) => DetalleCampaniaPage(campania: campania),
        ),
...
