...
              border: Border.all(
                color: const Color(0xFFFDE8DC),
                width: 2,
              ),
            ),
            child: TextFormField(
              key: const Key('txtMontoDonacion'),
              controller: montoController,
              keyboardType: TextInputType.number,
              decoration: const InputDecoration(
                contentPadding: EdgeInsets.symmetric(horizontal: 16, vertical: 12),
                border: InputBorder.none,
                hintText: 'Monto personalizado',
...
