...
    }

    final usuario = authController.currentUser!;
    final nombre = usuario.nombre;

    return Scaffold(
      key: const Key('dashboardPage'),
      backgroundColor: const Color(0xFFFFF8F4),
      body: RefreshIndicator(
        color: const Color(0xFFF58C5B),
        backgroundColor: const Color(0xFFFFF8F4),
        onRefresh: _refreshData,
        child: CustomScrollView(
...
                size: 20,
              ),
            ),
            const SizedBox(width: 12),
            const Text(
              'Campañas Destacadas',
              key: Key('lblCampaniasDestacadas'), // <-- KEY DEL TEXTO
              style: TextStyle(
                fontSize: 18,
                fontWeight: FontWeight.w700,
                color: Color(0xFF2F2F2F),
              ),
            ),
...
